Resolves: tdf#91950 optional entries may not be present

here we appear to check if the preceding optional entries are of certain
types. Presumably if they are optional then its legal for them not to
exist at all, just that if they are there they should be in the right
order.

Change-Id: Id147b91d7d375d7985d901cda112c7757dc3fb19